--- a/css/style.css
+++ b/css/style.css
@@ -9,16 +9,90 @@
     
 }
 body{
-    background-image:url(../assets/image/pexels-asad-photo-maldives-9394652.jpg) ;
+    background-image: url(../assets/image/pexels-asad-photo-maldives-9394652.jpg) ;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     
 }
 
 .titre{
-
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .exo{
-    background-color: rgba(76, 177, 235, 0.151);
+    background-color: rgba(76, 177, 235, 0.473);
     border: solid;
     border-radius: 4px 4px;
-    padding: 3px;
+    padding: 5px;
+    color:  black;
+}
+
+.if{
+    width: 400px;
+    height: 170px;
+    background-color: rgba(76, 177, 235, 0.623);
+    
+    margin: 10px auto ;
+    display: block;
+    position: relative ;
+    padding-top: 5px;
+    text-align:left;
+    
+    
+}
+
+.cathegorie{ 
+    
+    text-align: left;
+    font-weight:bold;
+    margin-left: 15px;
+    margin-bottom: 15px;
+    
+    
+}
+.image{
+    display: inline-block;
+    width: 150px;
+    margin-left: 15px
+   
+
+}
+img{
+    margin: 0px;
+    display: inline-block;
+    width: 150px;
+    height: 108px;
+}
+.marque{
+    position: absolute;
+    display: -webkit-box;
+    top: 60px;
+    right: -174px;
+    width: -webkit-fill-available;
+}
+.model{
+    display: -webkit-box;
+    position: absolute;
+    top: 85px;
+    right: -174px;
+    width: -webkit-fill-available;
+    
+}
+.price{
+    display: -webkit-box;
+    position: absolute;
+    top: 112px;
+    right: -174px;
+    width: -webkit-fill-available;
+
+}
+.close{
+    width: 20px;
+    background-color: rgb(248, 8, 8);
+    color: white;
+    position: absolute;
+    top: 9px;
+    right: 15px;
+    border-radius: 6px 6px;
+    
+    
 }
